add_executable(aufgabe_2_und_3
        aufgabe_2_und_3.cpp)

add_executable(aufgabe_4
        aufgabe_4.cpp
        circle.cpp
        vec2.cpp)
add_executable(aufgabe_6,7,8
        aufgabe_tests.cpp
        circle.cpp
        vec2.cpp
        )
add_executable(aufgabe_9
        aufgabe_9.cpp
        )

add_executable(aufgabe_11
        aufgabe_11.cpp
        )

add_executable(aufgabe_12
        aufgabe_12.cpp
        )